CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(slib)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(VERSION_RELEASE 0)

SET(OUTPUT_LIB "${CMAKE_PROJECT_NAME}.${VERSION_MAJOR}.${VERSION_MINOR}")

AUX_SOURCE_DIRECTORY(src SRCS)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_C_COMPILER "gcc")
SET(EXTRA_C_FLAGS "${EXTRA_C_FLAGS} -fpic")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_C_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Winline")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")

SET(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -lpthread")

ADD_LIBRARY(${OUTPUT_LIB} SHARED ${SRCS})
